# cozyutils-rust

./: AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
src/cli/: args.rs  mod.rs  usage.rs
src/commands/: any_to_export.rs  commit_message.rs  config.rs  mod.rs  pr_message.rs  svg_to_tsx.rs
src/utils/: config.rs  fs.rs  message.rs  mod.rs
