[package]
name = "cozyutils"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
ureq = { version = "2.10.1", features = ["json"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
